--- a/flavor.toml
+++ b/flavor.toml
@@ -29,7 +29,7 @@ count_selected = { fg = "darkgray", bg = "blue" }     # Darkened black on Blue
 
 # Border
 border_symbol = "│"
-border_style = { fg = "#1f2e59" } # Darkened black
+border_style = { fg = "black" } # Darkened black
 
 # : }}}
 
@@ -43,6 +43,31 @@ inactive = {}
 
 # : }}}
 
+# : Status {{{
+
+[status]
+separator_open = ""
+separator_close = ""
+separator_style = { fg = "gray", bg = "gray" }
+
+# Mode
+mode_normal = { bg = "blue", bold = true }
+mode_select = { bg = "red", bold = true }
+mode_unset = { bg = "red", bold = true }
+
+# Progress
+progress_label = { bold = true }
+progress_normal = { fg = "blue", bg = "black" }
+progress_error = { fg = "red", bg = "black" }
+
+# Permissions
+permissions_t = { fg = "green" }
+permissions_r = { fg = "yellow" }
+permissions_w = { fg = "red" }
+permissions_x = { fg = "cyan" }
+permissions_s = { fg = "darkgray" }
+
+# : }}}
 
 # : Input {{{
 
